--- a/public 2/index.html
+++ b/public 2/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Katrina and Ian's wedding: A uniting of the hurricanes"
+      content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ian and Katrina's Wedding</title>
+    <title>Kat & Ian's Wedding</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
